ADD references, experience and more

--- a/index.html
+++ b/index.html
@@ -62,13 +62,7 @@
         </div>
     </div>
 
-    
-    <div class="experience">
-        Experiencia     
-        <p class="title">Técnico en sistemas
-            <p class="sub">Servico Nacional de Aprendizaje SENA (ENERO 2016 - DICIEMBRE 2017)</p>
-        </p>
-    </div>
+
     <div class="education">
         Formación académica
         <p class="title">Tecnología Diseño, Mantenimiento e Implementación de Sistemas de Telecomunicaciones
@@ -82,6 +76,34 @@
 
     </div>
 
+    <div class="experience">
+        Experiencia     
+        <p class="title">Aprendiz SENA
+            <p class="sub">TELEFONICA MOVISTAR (JULIO 2020 - DICIEMBRE 2020)</p>
+        <details class="detalles"><summary>Actividades</summary>
+
+            <ul>
+                <li>Verificar la cobertura móvil, cobre y Fibra Óptica por sector</li>
+                <li>Creación de informes en excel</li>
+                <li>Gestión de facturas, informes de compra y moras de pago</li>
+                <li>Gestión de carteras de clientes</li>
+              </ul>
+        </details>
+        <p class="title">Operaria
+            <p class="sub">PROJECT BPO contratista CEMEX (SEPTIEMBRE 2019 - MARZO 2020)</p>
+        <details class="detalles"><summary>Actividades</summary>
+
+            <ul>
+                <li>Recepción de vounchers y facturas</li>
+                <li>Funciones de digitadora</li>
+                <li>Inventario diario y semanales de consumo</li>
+                <li>Archivo de información</li>
+              </ul>
+        </details>
+
+        </p>
+    </div>
+
     <div class="blandas">
         Habilidades blandas
         <p class="sub1">Inteligenica emocional</p>
@@ -90,10 +112,35 @@
         <p class="sub1">Networking efectivo</p>
     </div>
 
+    <div class="referencias">
+        Referencias
+        <p class="title">RAFAEL ANTONIO MORA</p>
+        <p class="sub">JEFE COMERCIAL EMPRESAS</p>
+        <p class="sub1">Cell: 3165293901</p>
+        <p class="title">CRISTIAN ALEJANDRO CALEÑO</p>
+        <p class="sub">INGENIERO ELECTRÓNICO SENA</p>
+        <p class="sub1">Cell: 3057333333</p>
+    </div>
+
+
     <div class="foto">
         <img src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO">
     </div>
     <div class="portafolio">Portafolio</div>
+    <div class="descargar">CV as pdf</div>
     <!-- https://platzi.com/p/Nicoll/ruta/6713-ia-mintic/diploma/detalle/ -->
+
+    <div class="white">
+        <p>
+        <img src="https://image.flaticon.com/icons/png/512/61/61109.png"/></a>
+        
+        <a title="Github" href="https://github.com/Nian-code">
+            <img src="https://image.flaticon.com/icons/png/512/23/23957.png"/></a>
+        <a title="Gmail" href="mailto:nianmejia16@gmail.com">
+            <img src=https://image.flaticon.com/icons/png/512/104/104069.png></a>
+        <a title="Whatsapp" href="https://wa.me/+573177438030">
+            <img src=https://images.vexels.com/media/users/3/157620/isolated/preview/28323eba1d9f71acc3cc92f0e043fc5c-icono-de-tel-eacute-fono-blanco-y-negro-by-vexels.png></a>
+        </p>
+    </div>
 </body>
 </html>
