Profile and links experience

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     <div class="experience">
         Experiencia     
         <p class="title">Aprendiz SENA
-            <p class="sub">TELEFONICA MOVISTAR (JULIO 2020 - DICIEMBRE 2020)</p>
+            <p  class="sub">TELEFONICA MOVISTAR (JULIO 2020 - DICIEMBRE 2020)
+            <a href="https://drive.google.com/file/d/1FyNE-mIMS3fgkPUZbo5QyhrKQDam0u8j/view?usp=sharing"> Ver certificado</a></p>
         <details class="detalles"><summary>Actividades</summary>
 
             <ul>
@@ -90,7 +91,7 @@
               </ul>
         </details>
         <p class="title">Operaria
-            <p class="sub">PROJECT BPO contratista CEMEX (SEPTIEMBRE 2019 - MARZO 2020)</p>
+            <p class="sub">PROJECT BPO contratista CEMEX (SEPTIEMBRE 2019 - MARZO 2020)<a href="https://drive.google.com/file/d/1yaVYveBs_nNWUrwCvQYTqNcDXy-3ifpv/view?usp=sharing"> Ver certificado</a></p>
         <details class="detalles"><summary>Actividades</summary>
 
             <ul>
@@ -122,6 +123,17 @@
         <p class="sub1">Cell: 3057333333</p>
     </div>
 
+    <div class="profile">
+        Perfil profesional
+        <p class="sub">
+            Soy profesional en el área de Telecomunicaciones y cuento con certificados de Cisco CCNA en routing y Switching. 
+            Estudio ciencia de datos y me gustaria colaborar como analista, porque me he certificado en R, Python, Machine Learning.
+            Busco un trabajo donde pueda demostrar mis conocmiento como programadora y abrirme camino en el mundo del desarrollo.
+
+        </p>
+
+    </div>
+
 
     <div class="foto">
         <img src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO">
@@ -132,6 +144,7 @@
 
     <div class="white">
         <p>
+        <a title="Linkedin" href="https://www.linkedin.com/in/nicoll-idaly-angulo-mejia-5b785a182/">
         <img src="https://image.flaticon.com/icons/png/512/61/61109.png"/></a>
         
         <a title="Github" href="https://github.com/Nian-code">
