organizar área de estudio

--- a/index.html
+++ b/index.html
@@ -125,10 +125,11 @@
             <div class="center-content">
                 <div class="education">
                     <p class="title">Formación académica</p>
-                    <p class="title_job1">Tecnología Diseño, Mantenimiento e Implementación de Sistemas de Telecomunicaciones</p>
+                    <p class="tit1">Tecnología Diseño, Mantenimiento e Implementación de Sistemas de Telecomunicaciones</p>
                         <p class="sub">Servico Nacional de Aprendizaje SENA (ENERO 2018 - DICIEMBRE 2020)</p>
                         <p class="sub"><a href="https://drive.google.com/file/d/15JPyzEAmnUBxIyCz2lCwdR_uP_jARDlM/view?usp=sharing">&#x1F3C6 Mejor aprendiz del área</a></p>
-                    <p class="title_job1"><a href= "https://drive.google.com/file/d/1gvWgqw__hRlKQOeA75fE4ZKOnr4Zc9q_/view?usp=sharing" class="title_job1">Técnico en sistemas</a></p>
+                    
+                        <p class="tit1"><a href= "https://drive.google.com/file/d/1gvWgqw__hRlKQOeA75fE4ZKOnr4Zc9q_/view?usp=sharing" class="tit1">Técnico en sistemas</a></p>
                         <p class="sub">Servico Nacional de Aprendizaje SENA (ENERO 2016 - DICIEMBRE 2017)</p>
                 </div>
             
