--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -1,4 +1,33 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<!DOCTYPE html>
+<html lang="es">
 
-<button class="btn btn-success">¿Soy un botón o un enlace?</button>
-<a href="#" class="btn btn-success">¿Soy un botón o un enlace?</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tecnológo en Telecomunicaciones / Analista de datos</title>
+    <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+    <div class="background">
+        <div class="cabecera-content">
+            <div class="title_big">
+                <p>Tecnológo en Telecomunicaciones / Analista de datos</p>
+                <p class="sub">Nicoll Idaly Angulo Mejia</p>
+            </div>
+            <div class="foto-content">
+                <div class="foto">
+                    <img
+                        src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO">
+                </div>
+            </div>
+            <div class="botton">
+                <div class="portafolio">Portafolio</div>
+                <div class="descargar">CV as pdf</div>
+            </div>
+        </div>
+
+    </div>
+</body>
+
+</html>
