--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -1,33 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnológo en Telecomunicaciones / Analista de datos</title>
-    <link rel="stylesheet" href="css/index.css">
+    <meta name="description" content="CV y portafolio nicoll-idaly-angulo-mejia">
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="background">
-        <div class="cabecera-content">
-            <div class="title_big">
-                <p>Tecnológo en Telecomunicaciones / Analista de datos</p>
-                <p class="sub">Nicoll Idaly Angulo Mejia</p>
-            </div>
-            <div class="foto-content">
-                <div class="foto">
-                    <img
-                        src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO">
-                </div>
-            </div>
-            <div class="botton">
-                <div class="portafolio">Portafolio</div>
-                <div class="descargar">CV as pdf</div>
-            </div>
-        </div>
-
-    </div>
+    
 </body>
-
 </html>
