uso de semantica HTML

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CV y portafolio nicoll-idaly-angulo-mejia">
-    <title>Document</title>
+    <meta name="robots" content="index,follow">
+    <link rel="stylesheet" href="css/capacitaciones.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/nolan/64/new-job.png">
+    <title>Capacitaciones y certificados</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Capacitaciones y certificaciones</h1>
+    </header>
+    <main></main>
+    <footer>
+    </footer>
 </body>
 </html>
