semantica y se agregó pestaña contactame

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -13,7 +13,13 @@
     <header>
         <h1>Capacitaciones y certificaciones</h1>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <video  controls preload="auto">
+                <source src="video.mp4#t=5,25">
+            </video>
+        </section>
+    </main>
     <footer>
     </footer>
 </body>
