--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="background">
         <header>
             <div class="title_big">
-                <h1>Tecnológo en Telecomunicaciones / Analista de datos</h1>
-                <h2>Nicoll Idaly Angulo Mejia</h2>
+                <span>
+                    <h1>Tecnológo en Telecomunicaciones / Analista de datos</h1>
+                    <h2>Nicoll Idaly Angulo Mejia</h2></span>
             </div>
             <div class="profile_photo">
                 <figure>
@@ -24,8 +25,9 @@
                 </figure>
             </div>
             <div class="botton">
-                <div class="portafolio">Portafolio</div>
-                <div class="descargar">CV as pdf</div>
+                <div class="button">Portafolio</div>
+                <div class="button"><a href="contact.html">Contáctame</a></div>
+                <div class="button">CV as pdf</div>
             </div>
         </header>
         <div class="main">
@@ -93,7 +95,7 @@
                         <figcaption>CSS</figcaption>
                     </figure>
                     </div>
-                    <p class="title1">Inglés nivel intermedio</p>
+                    <span class="title1">Inglés nivel intermedio</span>
             </div>
             <div class="skill_tecnical">
                 <p class="title">Habilidades profesionales</p>
@@ -136,9 +138,8 @@
                 <div class="experience">
                     <p class="title">Experiencia</p>
                         <p class="title_job">APRENDIZ SENA</p>
-                        <p class="sub">TELEFONICA MOVISTAR (JULIO 2020 - DICIEMBRE 2020)
-                        <a href="https://drive.google.com/file/d/1FyNE-mIMS3fgkPUZbo5QyhrKQDam0u8j/view?usp=sharing">Ver certificado</a></p>
-                        <p>
+                        <span class="sub">TELEFONICA MOVISTAR (JULIO 2020 - DICIEMBRE 2020)
+                        <a href="https://drive.google.com/file/d/1FyNE-mIMS3fgkPUZbo5QyhrKQDam0u8j/view?usp=sharing">Ver certificado</a></span>
                         <details class="detalles"><summary>Actividades</summary>
                             <ul>
                                 <li>Verificar la cobertura móvil, cobre y Fibra Óptica por sector</li>
@@ -148,8 +149,8 @@
                             </ul>
                         </details>
                         <p class="title_job">OPERARÍA</p>
-                        <p class="sub">PROJECT BPO contratista CEMEX (SEPTIEMBRE 2019 - MARZO 2020)
-                        <a href="https://drive.google.com/file/d/1yaVYveBs_nNWUrwCvQYTqNcDXy-3ifpv/view?usp=sharing">Ver certificado</a></p>
+                        <span class="sub">PROJECT BPO contratista CEMEX (SEPTIEMBRE 2019 - MARZO 2020)
+                        <a href="https://drive.google.com/file/d/1yaVYveBs_nNWUrwCvQYTqNcDXy-3ifpv/view?usp=sharing">Ver certificado</a></span>
                         <details class="detalles"><summary>Actividades</summary>
             
                         <ul>
@@ -175,7 +176,7 @@
             </div>
         </div>
 
-        <div class="white">
+        <footer>
             <p>
             <a title="Linkedin" href="https://www.linkedin.com/in/nicoll-idaly-angulo-mejia-5b785a182/">
             <img src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="profiel-linkedin"></a>
@@ -186,7 +187,7 @@
                 <img src=https://image.flaticon.com/icons/png/512/104/104069.png alt="Gmail"></a>
             <a title="Whatsapp" href="https://wa.me/+573177438030"><img src=https://images.vexels.com/media/users/3/157620/isolated/preview/28323eba1d9f71acc3cc92f0e043fc5c-icono-de-tel-eacute-fono-blanco-y-negro-by-vexels.png alt="icono-whatsapp"></a>
             </p>
-        </div> 
+        </footer> 
         </div>
 </body>
 
