--- a/contact.html
+++ b/contact.html
@@ -17,20 +17,21 @@
         <form action="">
             <label for="nombre">
                 <span>Nombre:</span>
-                <input type="text" id="nombre" placeholder="Tu nombre">
+                <input type="text" id="nombre" placeholder="Tu nombre" name="nombre" autocomplete="name">
             </label>
             <label for="tell">
                 <span>Telefono:</span>
-                <input type="text" id="tell" placeholder="Tu teléfono">
+                <input type="text" id="tell" placeholder="Tu teléfono" name="tell" autocomplete="tel">
             </label>
             <label for="email">
                 <span>Email:</span>
-                <input type="text" id="email" placeholder="Tu email">
+                <input type="text" id="email" placeholder="Tu email" name="email" autocomplete="email">
             </label>
             <label for="mensaje">
-                <span>Tu mensaje:</span>
-                <input type="text" id="mensaje" placeholder="Tu mensaje">
+                <span>Mensaje:</span>
+                <input type="text" id="mensaje" placeholder="Tu mensaje" name="mensaje">
             </label>
+            <input type="submit" id="enviar">
         </form>
     </main>
     <footer>
