--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
         <form action="">
             <label for="nombre">
                 <span>Nombre:</span>
-                <input type="text" id="nombre" placeholder="Tu nombre" name="nombre" autocomplete="name">
+                <input type="text" id="nombre" placeholder="Tu nombre" name="nombre" autocomplete="name" required>
             </label>
             <label for="tell">
                 <span>Telefono:</span>
@@ -25,7 +25,7 @@
             </label>
             <label for="email">
                 <span>Email:</span>
-                <input type="text" id="email" placeholder="Tu email" name="email" autocomplete="email">
+                <input type="text" id="email" placeholder="Tu email" name="email" autocomplete="email" required>
             </label>
             <label for="mensaje">
                 <span>Mensaje:</span>
