--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         </form>
     </main>
     <footer>
-        <p>
+        <figure>
         <a title="Linkedin" href="https://www.linkedin.com/in/nicoll-idaly-angulo-mejia-5b785a182/">
         <img src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="profiel-linkedin"></a>
         
@@ -43,8 +43,9 @@
             <img src="https://image.flaticon.com/icons/png/512/23/23957.png" alt="profile github"></a>
         <a title="Gmail" href="mailto:nianmejia16@gmail.com">
             <img src=https://image.flaticon.com/icons/png/512/104/104069.png alt="Gmail"></a>
-        <a title="Whatsapp" href="https://wa.me/+573177438030"><img src=https://images.vexels.com/media/users/3/157620/isolated/preview/28323eba1d9f71acc3cc92f0e043fc5c-icono-de-tel-eacute-fono-blanco-y-negro-by-vexels.png alt="icono-whatsapp"></a>
-        </p>
-    </footer> 
+        <a title="Whatsapp" href="https://wa.me/+573177438030">
+            <img src=https://images.vexels.com/media/users/3/157620/isolated/preview/28323eba1d9f71acc3cc92f0e043fc5c-icono-de-tel-eacute-fono-blanco-y-negro-by-vexels.png alt="icono-whatsapp"></a>
+        </figure>
+    </footer>
 </body>
 </html>
