--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,21 @@
     <link rel="shortcut icon" href="https://img.icons8.com/nolan/64/invite.png">
     <link rel="stylesheet" href="./css/contact.css">
     <title>Contáctame</title>
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Dejame un mensaje</h1>
+        <span class="main_name">Nicoll Idaly / Analista de datos</span>
+        <ul class="main-nav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">PORTAFOLIO</a></li>
+            <li><a href="capacitaciones.html">CAPACITACIONES</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
     </header>
+    <section>
+        <h1>Dejame un mensaje</h1>
+    </section>
     <main>
         <form action="">
             <label for="nombre">
