ADD metrics rem

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <title>Tecnológo en Telecomunicaciones / Analista de datos</title>
         <link rel="stylesheet" href="css/index.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link
-            href="https://fonts.googleapis.com/css2?family=Redressed&display=swap"
-            rel="stylesheet">
-            <link rel="preconnect" href="https://fonts.gstatic.com">
-            <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Redressed&family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Redressed&family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -25,7 +25,7 @@
             <ul class="main-nav">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="">PORTAFOLIO</a></li>
-                <li><a href="capacitaciones.html">CAPACITACIONES</a></li>
+                <li><a href="capacitaciones.html">CERTIFICATIONS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </header>
