--- a/index.html
+++ b/index.html
@@ -29,18 +29,19 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </header>
+        <main>
         <section class="home">
             <article class="photo">
-                <section>
+                <section class="photo-name">
                 <figure class="photo_profile">
                     <img
                         src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO"
                         alt="profile">
                 </figure>
-                <section class="home_text">
-                <h3>NICOLL IDALY ANGULO MEJIA</h3>
-                <hr></hr>
-                <h3>ANALISTA DE DATOS</H3>
+                <section class="nom_profesion">
+                    <h3>NICOLL IDALY ANGULO MEJIA</h3>
+                    <hr></hr>
+                    <h3>ANALISTA DE DATOS</H3>
                 </section>
                 </section>
                 <figure class="redes">
@@ -84,6 +85,7 @@
             </article>
         
         </section>
+        </main>
     </body>
 
 </html>
