--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <body>
         <header>
-            <span class="main_name">Nicoll Idaly / Analista de datos</span>
+            <span class="main_name">&lt;Nicoll Idaly /&gt;</span>
             <ul class="main-nav">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="">PORTAFOLIO</a></li>
@@ -78,7 +78,7 @@
                     como programadora y encaminarme en el mundo
                     del desarrollo.
                 </p>
-                <section>
+                <section class="sec-button">
                     <span><a href="" class="button">RESUME</a></span>
                     <span><a href="" class="button">PROJECTS</a></span>
                 </section>
