Acomodar padding header

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <body>
         <header>
             <span class="main_name">&lt;Nicoll Idaly /&gt;</span>
-            <!-- <ul class="main-nav">
+            <ul class="main-nav">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="">PORTAFOLIO</a></li>
                 <li><a href="capacitaciones.html">CERTIFICATIONS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-            </ul> -->
+            </ul>
         </header>
         <main>
         <section class="home">
