cambios en home

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </header>
         <main>
         <section class="home">
-            <article class="photo">
-                <section class="photo-name">
+            <article class="photo_text">
                 <figure class="photo_profile">
                     <img
                         src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO"
@@ -43,6 +42,21 @@
                     <hr></hr>
                     <h3>ANALISTA DE DATOS</H3>
                 </section>
+            </article>
+            <article class="profile">
+                <p>
+                    Profesional en el área de Telecomunicaciones, con
+                    certificación Cisco CCNA en Routing y Switching.
+                    Estudio ciencia de datos y me gustaria colaborar como
+                    analista, porque me he certificado en R,
+                    Python y Machine Learning.
+                    Busco un trabajo donde pueda demostrar mis conocimientos
+                    como programadora y encaminarme en el mundo
+                    del desarrollo.
+                </p>
+                <section class="sec-button">
+                    <span><a href="" class="button">RESUME</a></span>
+                    <span><a href="" class="button">PROJECTS</a></span>
                 </section>
                 <figure class="redes">
                     <a title="Whatsapp" href="https://wa.me/+573177438030">
@@ -66,22 +80,6 @@
                             src="https://image.flaticon.com/icons/png/512/23/23957.png"
                             alt="profile github"></a>
                 </figure>
-            </article>
-            <article class="profile">
-                <p>
-                    Profesional en el área de Telecomunicaciones, con
-                    certificación Cisco CCNA en Routing y Switching.
-                    Estudio ciencia de datos y me gustaria colaborar como
-                    analista, porque me he certificado en R,
-                    Python y Machine Learning.
-                    Busco un trabajo donde pueda demostrar mis conocimientos
-                    como programadora y encaminarme en el mundo
-                    del desarrollo.
-                </p>
-                <section class="sec-button">
-                    <span><a href="" class="button">RESUME</a></span>
-                    <span><a href="" class="button">PROJECTS</a></span>
-                </section>
             </article>
         
         </section>
