Cambio en el fondo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
             href="https://img.icons8.com/nolan/64/parse-from-clipboard.png">
         <title>Tecnológo en Telecomunicaciones / Analista de datos</title>
         <link rel="stylesheet" href="css/index.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Redressed&family=Roboto:wght@100&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -34,13 +29,13 @@
             <article class="photo_text">
                 <figure class="photo_profile">
                     <img
-                        src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO"
-                        alt="profile">
+                        src = "https://i.pinimg.com/474x/d2/d1/2c/d2d12c46f29f4aa0a6e3d5fe7e4dbffe.jpg"
+                        alt="profile"> <!-- src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO" -->
                 </figure>
                 <section class="nom_profesion">
-                    <h3>NICOLL IDALY ANGULO MEJIA</h3>
+                    <h3>Nicoll Idaly Angulo Mejia</h3>
                     <hr></hr>
-                    <h3>ANALISTA DE DATOS</H3>
+                    <h3>Analista de datos</H3>
                 </section>
             </article>
             <article class="profile">
