--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             nicoll-idaly-angulo-mejia">
         <meta name="robots" content="index,follow">
         <link rel="shortcut icon"
-            href="https://img.icons8.com/nolan/64/parse-from-clipboard.png">
+            href="https://img.icons8.com/nolan/25/parse-from-clipboard.png">
         <title>Tecnológo en Telecomunicaciones / Analista de datos</title>
         <link rel="stylesheet" href="css/index.css">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Redressed&family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -17,6 +17,14 @@
     <body>
         <header>
             <span class="main_name">&lt;Nicoll Idaly /&gt;</span>
+
+            <ul class="main-nav-mobile">
+                <li><a href="index.html"><img src="https://img.icons8.com/ios-filled/25/000000/home.png"/></a></li>
+                <li><a href="" class="portafolio-icono"><img src="https://img.icons8.com/material/25/000000/briefcase--v1.png"/></a></li>
+                <li><a href="capacitaciones.html"><img src="https://img.icons8.com/ios-glyphs/30/000000/course-assign.png"/></a></li>
+                <li><a href="contact.html"><img src="https://img.icons8.com/ios-filled/25/000000/business-contact.png"/></a></li>
+            </ul>
+
             <ul class="main-nav">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="">PORTAFOLIO</a></li>
@@ -25,58 +33,40 @@
             </ul>
         </header>
         <main>
+        <section class="sect-img-hello">
+            <section class="hello">
+                <h1>Hola, Soy <strong>Nicoll Idaly</strong></h1>
+                <h2>Tecnologo en telecomunicaciones y estudiante análisis de datos</h2>
+            </section>
+            
+            <picture class="portada">
+                <source media="(min-width:1300px)" srcset="https://previews.dropbox.com/p/thumb/ABAooPZ6D7m2QVOhmQiZWcAFvCqgadq9150c4LzMHLkkO-ZwiydjQmUr8fZDCUjEHY967SwVgX1oAsMUJHr17-zWy9OYCjJRxQeVFMR2kb6g6wxPUNSsZV9GjfE7mdrLDxUFBQNUa0Won63O1ytGD8BjUaXOSVaTS3Pq2tRR--VD3KtGkQ2SnE7UilosUdJdjw3yXI1xNrJljM7mVQiv2CnRFd8DguhROd4jY26shK8PAoA3M5CQgjNbJB019T4jFLn-PWqYD2pn5h_bw5tixeDA8lniu36l1UGGhwfyi2D-v215N23Hzvn90LQTXx1kkd-ACcH5mQry3nCGklU6hFxv40IivoSah24xa9uPVUTkGg/p.jpeg?fv_content=true&size_mode=5">
+                <source media="(min-width:650px)" srcset="https://previews.dropbox.com/p/thumb/ABASrV3e-dffNHREHMtf4VWr1mldd0XR9U5Uy8A96I3hRtHlxL9orl296v42PiVQxi1X4FAFNZFnfQ2hh3NYeY_OgitQpM8sQAfrkEu89d-e83ZHSyrIyO_lzPLSe66Oz6zZHfM_UcszSumPbm0USiZJYy8Z1Ld_5pnyAx6-52-6B4ORKEMzO6B3MsOaJUsdFZIAeRkmsmu3Ci7KstswhucgCYR2PBRcOrGlMQPSBQ-ByW-y-9XAdB75pps5OIkBRTJKFWc1UELKzZqD_bkliO6cEbBMTduP4OuU1yadazddvNgmCLqvRRFV41mg8_b-qQLRjKoCT0N5f8l_2IoDVMwodzp-pAM88rgumkuXfaWJ5w/p.jpeg?size=1600x1200&size_mode=3">
+                <img src="https://previews.dropbox.com/p/thumb/ABC12PEy-IdUc6Y68fXCnL8w8-_1F_GV5_6s4A6r25fGJe8g8C3ph0PozTQF763OxE0xNv_6YR2ocdVb3VAqgbKb7yctf7PeLg4ljDkohpJVmj1esViT51bTgJtnxsmHhyDQ7BU-H--foMdboWhCAokf_NUnTcy4cRYuWid1t-EGccHeo-ec3ZSH40uc69cgl8LtIL3xfpKIDvvkQSJ0VW56Xi9VhEwLq2UCuszh26gxL6-fk0pAK0pD6rZB1KaS5aSDZiF2lSwYUFlFNA3Sa0yNGBPMCsKYeYybcWDGzBwzDXwC8lUqqeZimEe2_H5Q_n9l9UqusumndObTGSW5lKZwXCbCZ6SVed32BzMeURwPyw/p.jpeg?fv_content=true&size_mode=5"
+             alt="portada_programación">
+            </picture>
+        </section>
         <section class="home">
-            <article class="photo_text">
-                <figure class="photo_profile">
-                    <img
-                        src = "https://i.pinimg.com/236x/ee/92/70/ee9270767cf6770010b8a9db489468d6--monna-lisa-leonardo.jpg"
-                        alt="profile"> <!-- src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO" -->
-                </figure>
-                <section class="nom_profesion">
-                    <h3>Nicoll Idaly Angulo Mejia</h3>
-                    <hr></hr>
-                    <h3>Analista de datos</H3>
-                </section>
-            </article>
-            <article class="profile">
-                <p>
-                    Profesional en el área de Telecomunicaciones, con
-                    certificación Cisco CCNA en Routing y Switching.
-                    Estudio ciencia de datos y me gustaria colaborar como
-                    analista, porque me he certificado en R,
-                    Python y Machine Learning.
-                    Busco un trabajo donde pueda demostrar mis conocimientos
-                    como programadora y encaminarme en el mundo
-                    del desarrollo.
-                </p>
-                <section class="sec-button">
-                    <span><a href="" class="button">RESUME</a></span>
-                    <span><a href="" class="button">PROJECTS</a></span>
-                </section>
-                <figure class="redes">
-                    <a title="Whatsapp" href="https://wa.me/+573177438030">
-                        <img
-                            src=https://images.vexels.com/media/users/3/157620/isolated/preview/28323eba1d9f71acc3cc92f0e043fc5c-icono-de-tel-eacute-fono-blanco-y-negro-by-vexels.png
-                            alt="icono-whatsapp"></a>
-
+            <figure class="photo_profile">
+                <img
+                    src = "https://i.pinimg.com/236x/ee/92/70/ee9270767cf6770010b8a9db489468d6--monna-lisa-leonardo.jpg"
+                    alt="profile"> <!-- src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2018/08/fotos-perfil-whatsapp_16.jpg?itok=aqeTumbO" -->
+            </figure>
+            <figure class="redes">
                     <a title="Gmail" href="mailto:nianmejia16@gmail.com">
-                        <img
-                            src=https://image.flaticon.com/icons/png/512/104/104069.png
-                            alt="Gmail"></a>
+                        <img src="https://img.icons8.com/ios-filled/30/000000/composing-mail.png"
+                            alt="Gmail"/></a>
 
                     <a title="Linkedin"
                         href="https://www.linkedin.com/in/nicoll-idaly-angulo-mejia-5b785a182/">
-                        <img
-                            src="https://image.flaticon.com/icons/png/512/61/61109.png"
-                            alt="profiel-linkedin"></a>
+                        <img src="https://img.icons8.com/metro/25/000000/linkedin.png" alt="icono-linkedin"/></a>
 
                     <a title="Github" href="https://github.com/Nian-code">
-                        <img
-                            src="https://image.flaticon.com/icons/png/512/23/23957.png"
-                            alt="profile github"></a>
-                </figure>
-            </article>
-        
+                        <img src="https://img.icons8.com/ios-filled/30/000000/github.png" alt="icono-github"/></a>
+            </figure>
+            <section class="down-button">
+                <span><a href="">Descargar CV</a></span>
+            </section>        
         </section>
         </main>
     </body>
