--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <span class="main_name">&lt;Nicoll Idaly /&gt;</span>
 
             <ul class="main-nav-mobile">
-                <li><a href="index.html"><img src="https://img.icons8.com/ios-filled/25/000000/home.png"/></a></li>
-                <li><a href="" class="portafolio-icono"><img src="https://img.icons8.com/material/25/000000/briefcase--v1.png"/></a></li>
-                <li><a href="capacitaciones.html"><img src="https://img.icons8.com/ios-glyphs/30/000000/course-assign.png"/></a></li>
-                <li><a href="contact.html"><img src="https://img.icons8.com/ios-filled/25/000000/business-contact.png"/></a></li>
+                <li><a href="index.html" alt="home"><img src="https://img.icons8.com/ios-filled/25/000000/home.png"/></a></li>
+                <li><a href="#" alt="portafolio"><img src="https://img.icons8.com/material/25/000000/briefcase--v1.png"/></a></li>
+                <li><a href="capacitaciones.html"alt="CERTIFICATIONS"><img src="https://img.icons8.com/ios-glyphs/30/000000/course-assign.png"/></a></li>
+                <li><a href="contact.html" alt="contact"><img src="https://img.icons8.com/ios-filled/25/000000/business-contact.png"/></a></li>
             </ul>
 
             <ul class="main-nav">
@@ -65,9 +65,10 @@
                         <img src="https://img.icons8.com/ios-filled/30/000000/github.png" alt="icono-github"/></a>
             </figure>
             <section class="down-button">
-                <span><a href="">Descargar CV</a></span>
+                <span><a href="#" alt="download-cv">Descargar CV</a></span>
             </section>        
         </section>
+        <section class=""
         </main>
     </body>
 
