--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
                 <span><a href="#" alt="download-cv">Descargar CV</a></span>
             </section>        
         </section>
-        <section class=""
+        <section class="about-me">
+            <h2>Acerca de mí</h2>
+            <p>Soy Nicoll, estudiante de analisis de datos, con diplomado en programación y codificación
+               de la universidad Javeriana.
+               Me encanta el desarrollo de software y crear código util para solucionar diferente problemas.
+            </p><p>
+               Pienso que la tecnología no tiene límite.
+            </p><p class="frase-platzi">
+               ¡Never stop to learn!
+            </p>
+        </section>
         </main>
     </body>
 
