add all information

--- a/index.html
+++ b/index.html
@@ -72,7 +72,77 @@
                ¡Never stop to learn!
             </p>
         </section>
+        <section class="education">
+            <h2>Educación</h2>
+            <h4>¿Qué he aprendido?</h4>
+            <h3>Carrera Ingeligencia Artificial</h3>
+            <span>Platzi 2020 Julio - Diciembre</span>
+            <h3>Tecnologo en Diseño, implementación y Manetenimiento de Sistemas de Telecomunicaciones</h2>
+            <span>Servicio Nacional de Aprendizaje</span>
+            <span class="fecha-duracion">2018-2020</span>
+            <h3>Técnico en Sistemas</h3>
+            <span>Servicio Nacional de Aprendizaje</span>
+            <span class="fecha-duracion">2016 - 2017</span>
+        </section>
+        <section class="awards">
+            <h2>Premios</h2>
+            <p>Mejor aprendiz del área Tecnologo en Telecomunicaciones</p>
+        </section>
+        <section class="skills">
+            <h2>Habilidades y lenguajes</h2>
+            <p>Análisis de datos
+            <progress max="100" value="45" >70%</progress></p>
+            <p>Github <progress max="100" value="75" ></progress></p></p>
+            <p>Python <progress max="100" value="65" ></progress></p></p>
+            <p>Lenguaje R <progress max="100" value="40" ></progress></p></p>
+            <p>HTML y CSS<progress max="100" value="45" ></progress></p></p>
+            <p>Network <progress max="100" value="80" ></progress></p></p>
+            <p>Linux <progress max="100" value="70" ></progress></p></p>
+            <p>Virtualización <progress max="100" value="80" ></progress></p></p>
+            <hr/>
+            <p>English <progress max="100" value="60"></progress></p></p>
+            <p>Español <progress max="100" value="80"></progress></p></p>
+        </section>
+        <section class="proyectos">
+            <h2>Proyectos</h2>
+        </section class="form">
+        <section>
+            <h1>Dejame un mensaje</h1>
+            <form action="">
+                <label for="nombre">
+                    <span>Nombre:</span>
+                    <input type="text" id="nombre" placeholder="Tu nombre" name="nombre" autocomplete="name" required>
+                </label>
+                <label for="tell">
+                    <span>Telefono:</span>
+                    <input type="text" id="tell" placeholder="Tu teléfono" name="tell" autocomplete="tel"   >
+                </label>
+                <label for="email">
+                    <span>Email:</span>
+                    <input type="text" id="email" placeholder="Tu email" name="email" autocomplete="email" required>
+                </label>
+                <label for="mensaje">
+                    <span>Mensaje:</span>
+                    <input type="text" id="mensaje" placeholder="Tu mensaje" name="mensaje">
+                </label>
+                <input type="submit" id="enviar">
+            </form>
+        </section>
         </main>
+        <footer>
+            <figure class="redes">
+                <a title="Gmail" href="mailto:nianmejia16@gmail.com">
+                    <img src="https://img.icons8.com/ios-filled/90/000000/composing-mail.png"
+                        alt="Gmail"/></a>
+
+                <a title="Linkedin"
+                    href="https://www.linkedin.com/in/nicoll-idaly-angulo-mejia-5b785a182/">
+                    <img src="https://img.icons8.com/metro/75/000000/linkedin.png" alt="icono-linkedin"/></a>
+
+                <a title="Github" href="https://github.com/Nian-code">
+                    <img src="https://img.icons8.com/ios-filled/90/000000/github.png" alt="icono-github"/></a>
+        </figure>
+        </footer>
     </body>
 
 </html>
